--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 Django==4.1
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
+Pillow==9.2.0
 pycountry==22.3.5
 sqlparse==0.4.2
 tzdata==2022.2
